--- a/public/assets/admin/css/login.css
+++ b/public/assets/admin/css/login.css
@@ -485,6 +485,8 @@ input:focus-visible {
     color: #2F8CFF !important;
     text-decoration: underline !important;
     font-size: 12px !important;
+    
+
 }
 
 .main-counter span {
@@ -691,6 +693,10 @@ input[type="radio"]:checked {
 input[type="time"]::after {
     content: "Hrs ";
     padding-right: 10px;
+    right: 0;
+    position: absolute;
+    top: 8px;
+    bottom: 0;
 }
 
 /* input[type="time"]::-webkit-calendar-picker-indicator {
