--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -6974,3 +6974,146 @@ button[disabled] {
 .report-inner-payroll {
     margin-bottom: 30px !important;
 }
+/* .view-data{
+    border: none;
+    background: rgba(240, 241, 245, 1);
+    border-radius: 5px;
+    color: rgba(128, 128, 128, 1);
+    padding: 7px;
+}
+.view-data:hover{
+    color: rgba(128, 128, 128, 1);
+}  */
+
+/* Initial button style */
+.view-data {
+    border: none;
+    background: rgba(240, 241, 245, 1);
+    border-radius: 5px;
+    color: rgba(128, 128, 128, 1);
+    padding: 7px;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+}
+.view-data::after{
+    /* background-image: url('/public/assets/admin/images/view.jpg'); */
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 16px; 
+    background-image: url('../../admin/images/arrow-down.png'); 
+    background-size: cover; 
+    background-repeat: no-repeat;
+    margin-left: 5px; 
+}
+.view-data:hover {
+    color: rgba(128, 128, 128, 1);
+}
+.view-data.expanded {
+    border: none;
+    background: rgba(47, 140, 255, 1);
+    border-radius: 5px;
+    color: white !important;    
+    padding: 7px;
+    transition: background-color 0.3s ease;
+}
+.view-data.expanded::after {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 16px; 
+    background-image: url('../../admin/images/arrow-up.png'); 
+    background-size: cover; 
+    background-repeat: no-repeat;
+    margin-left: 5px; 
+}
+.entries-data{
+    margin-top: 30px;
+    margin-left: 40px;
+}
+.col-11 {
+    display: flex;
+    flex-direction: column;
+    margin: -6;
+}
+.col-11 p {
+    margin: 4; /* Remove default margin */
+}
+.clr-p{
+    color: rgba(128, 128, 128, 1);
+}
+.staff-view-punches{
+    border-radius: 8px;
+    /* margin-left: 80px; */
+    /* margin-top: 30px; */
+    display: flex;
+    padding: 12px;
+    color: rgba(47, 140, 255, 1);
+    border-color: rgba(47, 140, 255, 1);
+    width: 70px;
+    height: 34px;
+    align-items: center;
+    background: white;
+}
+.staff-punches-date-time{
+    /* margin-top: 34px; */
+    line-height: 6px;
+    padding-block: 0px;
+    /* color: rgba(128, 128, 128, 1); */
+}
+.staff-punches-time {
+    text-align: center; /* Align content of the div to the center */
+    color: rgba(128, 128, 128, 1);
+}
+.staff-punches-time p {
+    text-align: left; /* Align text within the paragraphs to the left */
+    margin: 5px 0; /* Adjust margin to make paragraphs closer */
+    padding: 0; /* Reset padding */
+}
+.main-view-punches{
+    padding-right: 35%;
+    padding-left: 5%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.punches-time-inner{
+    display: flex;
+}
+.staff-view-time{
+    margin-left: 15px;
+}
+.staff-view-time p{
+    color: rgba(5, 14, 23, 1);
+}
+.btn-approve{
+    color: rgba(58, 199, 59, 1);
+    border-color: rgba(58, 199, 59, 1);
+    border-radius: 10px;
+}
+.btn-approve:hover{
+    background-color: white !important;
+    color: rgba(58, 199, 59, 1) !important;
+    border-color: rgba(58, 199, 59, 1) !important;
+}
+.btn-decline{
+    color: rgba(255, 94, 94, 1);
+    border-color: rgba(255, 94, 94, 1);
+    border-radius: 10px;
+}
+.btn-decline:hover{
+    background-color: white !important;
+    color: rgba(255, 94, 94, 1)!important;
+    border-color: rgba(255, 94, 94, 1)!important;
+}
+.btn-pending{
+    color: rgba(250, 180, 70, 1);
+    border-color: rgba(250, 180, 70, 1);
+    border-radius: 10px;
+}
+.btn-pending:hover{
+    background-color: white !important;
+    color: rgba(250, 180, 70, 1) !important;
+    border-color: rgba(250, 180, 70, 1) !important;
+}
